@@ -57,19 +57,6 @@ class tx_oelib_Mapper_FrontEndUser extends tx_oelib_DataMapper {
 	protected $additionalKeys = array('username');
 
 	/**
-	 * Gets the currently logged-in front-end user.
-	 *
-	 * @return tx_oelib_Model_FrontEndUser the logged-in front-end user, will
-	 *                                     be null if no user is logged in or
-	 *                                     if there is no front end
-	 *
-	 * @deprecated 2009-03-02 Will be removed in oelib 0.8.0. Use tx_oelib_FrontEndLoginManager::getLoggedInUser
-	 */
-	public function getLoggedInUser() {
-		return tx_oelib_FrontEndLoginManager::getInstance()->getLoggedInUser();
-	}
-
-	/**
 	 * Reads a record from the database by UID (from this mapper's table). Also
 	 * hidden records will be retrieved.
 	 *
