@@ -1,4 +1,5 @@
 0.8.0 - currently working on
+- [#3728] Change: Drop functions that have been announced to be removed in oelib 0.8.0
 - [#3768] Fix: Relations to FE user groups with the UID 0 should be ignored
 - [#3741] Fix: PID in page type error message displayed as "Array"
 - [#3710] Change: Use self:: for static calls within the same class
